--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>pri.adam.demo01;pri.adam.demo02;pri.adam.demo03;pri.adam.demo05_client</param-value>
+            <param-value>pri.jersey.demo01;prjerseyam.demo02;prjerseyam.demo0jerseyi.adam.demo05_client</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
